--- a/index.html
+++ b/index.html
@@ -3,16 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy for [Your Game Name]</title>
+    <title>Privacy Policy for Nature's Wrath</title>
 </head>
 <body>
-    <h1>Privacy Policy for [Your Game Name]</h1>
-    <p>[Your Company Name] built the [Your Game Name] app as an Ad Supported app. This SERVICE is provided by [Your Company Name] at no cost and is intended for use as is.</p>
+    <h1>Privacy Policy for Nature's Wrath</h1>
+    <p>Lepmis Studio built the Nature's Wrath app as an Ad Supported app. This SERVICE is provided by Lepmis Studio at no cost and is intended for use as is.</p>
     <p>This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
     <p>If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
 
     <h2>Information Collection and Use</h2>
-    <p>For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to [types of personal information collected]. The information that we request will be retained by us and used as described in this privacy policy.</p>
+    <p>For a better experience while using our Service, we may require you to provide us with certain personally identifiable information. The app may collect information that is used for identifying you, improving the gameplay experience, and serving personalized ads. The types of information we collect include:</p>
+    <ul>
+        <li><strong>Device Information</strong>: Information such as device model, operating system version, unique device identifiers (e.g., Android Advertising ID), IP address, and device language.</li>
+        <li><strong>Usage Data</strong>: Information related to how you interact with the game, including in-game actions, game progress, and gameplay time.</li>
+        <li><strong>Location Data</strong>: Approximate location based on your IP address, which may be used to serve region-specific ads.</li>
+        <li><strong>Advertising Data</strong>: Information such as interactions with ads, ad impressions, and click-through data, as well as data from third-party advertising networks.</li>
+        <li><strong>Crash Logs and Diagnostics</strong>: If there is an error or crash in the game, we may collect crash logs and diagnostics for improving the game's performance.</li>
+    </ul>
+    <p>This data is primarily used to:</p>
+    <ul>
+        <li>Provide relevant advertisements through third-party ad networks.</li>
+        <li>Improve the game's performance and user experience.</li>
+        <li>Analyze how the game is used and improve in-game features.</li>
+    </ul>
+    <p>Please note that the app may use third-party services that collect information used to identify you, such as advertising partners (e.g., Google AdMob, Unity Ads, or other ad networks).</p>
+    
+    <p>This app uses third-party service providers for serving ads, which may collect and use your information. These service providers include but are not limited to:</p>
+    <ul>
+        <li><a href="https://policies.google.com/privacy">Google AdMob</a></li>
+        <li><a href="https://unity.com/legal/privacy-policy">Unity Ads</a></li>
+        <li><a href="https://www.facebook.com/about/privacy">Facebook Audience Network</a></li>
+    </ul>
 
     <h2>Log Data</h2>
     <p>We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</p>
@@ -30,6 +51,6 @@
     <p>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at [Your Contact Information].</p>
+    <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at ziafnatluos@gmail.com.</p>
 </body>
 </html>
