--- a/index.html
+++ b/index.html
@@ -4,53 +4,127 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy for Nature's Wrath</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+            background-color: #f9f9f9;
+        }
+
+        h1 {
+            color: #2c3e50;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            color: #3498db;
+            border-bottom: 2px solid #3498db;
+            padding-bottom: 10px;
+            margin-top: 30px;
+        }
+
+        p {
+            margin: 15px 0;
+        }
+
+        ul {
+            margin-left: 20px;
+        }
+
+        ul li {
+            margin: 8px 0;
+        }
+
+        a {
+            color: #3498db;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background: #ffffff;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            border-radius: 8px;
+        }
+
+        .contact {
+            text-align: center;
+            margin-top: 40px;
+        }
+
+        @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+
+            .container {
+                padding: 15px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Privacy Policy for Nature's Wrath</h1>
-    <p>Lepmis Studio built the Nature's Wrath app as an Ad Supported app. This SERVICE is provided by Lepmis Studio at no cost and is intended for use as is.</p>
-    <p>This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
-    <p>If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
+    <div class="container">
+        <h1>Privacy Policy for Nature's Wrath</h1>
+        <p>Lepmis Studio built the Nature's Wrath app as an Ad Supported app. This SERVICE is provided by Lepmis Studio at no cost and is intended for use as is.</p>
+        <p>This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
+        <p>If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
 
-    <h2>Information Collection and Use</h2>
-    <p>For a better experience while using our Service, we may require you to provide us with certain personally identifiable information. The app may collect information that is used for identifying you, improving the gameplay experience, and serving personalized ads. The types of information we collect include:</p>
-    <ul>
-        <li><strong>Device Information</strong>: Information such as device model, operating system version, unique device identifiers (e.g., Android Advertising ID), IP address, and device language.</li>
-        <li><strong>Usage Data</strong>: Information related to how you interact with the game, including in-game actions, game progress, and gameplay time.</li>
-        <li><strong>Location Data</strong>: Approximate location based on your IP address, which may be used to serve region-specific ads.</li>
-        <li><strong>Advertising Data</strong>: Information such as interactions with ads, ad impressions, and click-through data, as well as data from third-party advertising networks.</li>
-        <li><strong>Crash Logs and Diagnostics</strong>: If there is an error or crash in the game, we may collect crash logs and diagnostics for improving the game's performance.</li>
-    </ul>
-    <p>This data is primarily used to:</p>
-    <ul>
-        <li>Provide relevant advertisements through third-party ad networks.</li>
-        <li>Improve the game's performance and user experience.</li>
-        <li>Analyze how the game is used and improve in-game features.</li>
-    </ul>
-    <p>Please note that the app may use third-party services that collect information used to identify you, such as advertising partners (e.g., Google AdMob, Unity Ads, or other ad networks).</p>
-    
-    <p>This app uses third-party service providers for serving ads, which may collect and use your information. These service providers include but are not limited to:</p>
-    <ul>
-        <li><a href="https://policies.google.com/privacy">Google AdMob</a></li>
-        <li><a href="https://unity.com/legal/privacy-policy">Unity Ads</a></li>
-        <li><a href="https://www.facebook.com/about/privacy">Facebook Audience Network</a></li>
-    </ul>
+        <h2>Information Collection and Use</h2>
+        <p>For a better experience while using our Service, we may require you to provide us with certain personally identifiable information. The app may collect information that is used for identifying you, improving the gameplay experience, and serving personalized ads. The types of information we collect include:</p>
+        <ul>
+            <li><strong>Device Information</strong>: Information such as device model, operating system version, unique device identifiers (e.g., Android Advertising ID), IP address, and device language.</li>
+            <li><strong>Usage Data</strong>: Information related to how you interact with the game, including in-game actions, game progress, and gameplay time.</li>
+            <li><strong>Location Data</strong>: Approximate location based on your IP address, which may be used to serve region-specific ads.</li>
+            <li><strong>Advertising Data</strong>: Information such as interactions with ads, ad impressions, and click-through data, as well as data from third-party advertising networks.</li>
+            <li><strong>Crash Logs and Diagnostics</strong>: If there is an error or crash in the game, we may collect crash logs and diagnostics for improving the game's performance.</li>
+        </ul>
+        <p>This data is primarily used to:</p>
+        <ul>
+            <li>Provide relevant advertisements through third-party ad networks.</li>
+            <li>Improve the game's performance and user experience.</li>
+            <li>Analyze how the game is used and improve in-game features.</li>
+        </ul>
+        <p>Please note that the app may use third-party services that collect information used to identify you, such as advertising partners (e.g., Google AdMob, Unity Ads, or other ad networks).</p>
+        
+        <p>This app uses third-party service providers for serving ads, which may collect and use your information. These service providers include but are not limited to:</p>
+        <ul>
+            <li><a href="https://policies.google.com/privacy">Google AdMob</a></li>
+            <li><a href="https://unity.com/legal/privacy-policy">Unity Ads</a></li>
+            <li><a href="https://www.facebook.com/about/privacy">Facebook Audience Network</a></li>
+        </ul>
 
-    <h2>Log Data</h2>
-    <p>We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</p>
+        <h2>Log Data</h2>
+        <p>We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</p>
 
-    <h2>Cookies</h2>
-    <p>This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device.</p>
+        <h2>Cookies</h2>
+        <p>This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device.</p>
 
-    <h2>Service Providers</h2>
-    <p>We may employ third-party companies and individuals to facilitate our Service, provide the Service on our behalf, perform Service-related services, or assist us in analyzing how our Service is used. These third parties have access to your Personal Information, but are obligated not to disclose or use it for any other purpose.</p>
+        <h2>Service Providers</h2>
+        <p>We may employ third-party companies and individuals to facilitate our Service, provide the Service on our behalf, perform Service-related services, or assist us in analyzing how our Service is used. These third parties have access to your Personal Information, but are obligated not to disclose or use it for any other purpose.</p>
 
-    <h2>Security</h2>
-    <p>We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</p>
+        <h2>Security</h2>
+        <p>We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</p>
 
-    <h2>Changes to This Privacy Policy</h2>
-    <p>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes.</p>
+        <h2>Changes to This Privacy Policy</h2>
+        <p>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes.</p>
 
-    <h2>Contact Us</h2>
-    <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at ziafnatluos@gmail.com.</p>
+        <h2>Contact Us</h2>
+        <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at ziafnatluos@gmail.com.</p>
+
+        <div class="contact">
+            <p>Thank you for reading our Privacy Policy!</p>
+        </div>
+    </div>
 </body>
 </html>
